[gd_scene load_steps=5 format=2]

[ext_resource path="res://ConstructScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Root.gd" type="Script" id=3]
[ext_resource path="res://GameScreen.tscn" type="PackedScene" id=4]

[node name="money" type="Sprite"]

[node name="Root" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TitleScreen" parent="Root" instance=ExtResource( 2 )]

[node name="ConstructScreen" parent="Root" instance=ExtResource( 1 )]

[node name="GameScreen" parent="Root" instance=ExtResource( 4 )]
