[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Root.gd" type="Script" id=3]

[node name="Root" type="Node2D"]
script = ExtResource( 3 )

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[connection signal="start_pressed" from="TitleScreen" to="." method="_on_TitleScreen_start_pressed"]
